# Gefion

./: .gitignore  .gitmodules  README.md
backend/: package-lock.json  package.json
backend/src/: index.js
backend/src/config/: contracts.json  index.js
backend/src/routes/: config.js  listings.js  steam.js  verifier.js
backend/src/services/: blockchain.js  database.js  listings.js  steam.js
contract/: MockUSDC.sol  SteamGameEscrow.sol  SteamGameGate.sol  SteamGameVerifier.sol  foundry.toml
contract/broadcast/Deploy.s.sol/31337/: run-1770313777.json  run-1770316521.json  run-latest.json
contract/script/: Deploy.s.sol
contract/test/: SteamEscrowIntegration.t.sol  SteamOwnershipVerifier.t.sol
docs/: escrow-flow.mmd  monad-testnet-deployment.md  prod-deploy.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: vite-env.d.ts
frontend/src/app/: App.tsx  config.ts  routes.tsx  types.ts
frontend/src/app/components/: About.tsx  BuyerDashboard.tsx  GameDetails.tsx  Marketplace.tsx  RootLayout.tsx  SellerDashboard.tsx  TransactionHistory.tsx
frontend/src/styles/: theme.css
scripts/: create-sample-listings.sh  deploy-monad.sh  deploy.sh  generate-notary-key.sh  seed-games.sh  start-all.sh  start-anvil.sh  start-monad.sh
steam-zktls/: .env.example  .gitignore  Cargo.toml  README.md  foundry.toml
steam-zktls/contracts/: SteamOwnershipVerifier.sol
steam-zktls/src/: export.rs  present.rs  prover.rs  types.rs  verifier.rs
steam-zktls/test/: SteamOwnershipVerifier.t.sol
(+4 files in other folders)
