[package]
name = "steam-zktls"
version = "0.1.0"
edition = "2021"
description = "Verify Steam game ownership using zkTLS (TLSNotary)"

[dependencies]
# TLSNotary
tlsn-prover = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.7" }
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.7" }
tlsn-formats = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.7" }
notary-client = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.7" }

# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "net", "io-util", "fs"] }
tokio-util = { version = "0.7", features = ["compat"] }

# HTTP
hyper = { version = "1.4", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Environment
dotenvy = "0.15"

# Misc
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
hex = "0.4"
chrono = "0.4"

# HTTP client (for non-zkTLS requests)
reqwest = { version = "0.11", features = ["json"] }

[[bin]]
name = "prover"
path = "src/prover.rs"

[[bin]]
name = "verifier"
path = "src/verifier.rs"

[[bin]]
name = "present"
path = "src/present.rs"
